--- a/odoo-helm/templates/secrets.yml
+++ b/odoo-helm/templates/secrets.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secret-basic-auth
+  name: db-credentials
 type: Opaque
 stringData:
   POSTGRES_DB: postgresdb
